<resources>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="app_name">GNBeat</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="metronome">Metronome</string>
    <string name="textStand">Text Stand</string>
    <string name="startStop">Start / Stop</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="down1">-1</string>
    <string name="up1">+ 1</string>
    <string name="up5">+ 5</string>
    <string name="down5">- 5</string>
    <string name="empty" />
    <string name="dump">DumP</string>
    <string name="trackListAlreadyContainThisTrack">Track-list already contain this track</string>
    <string name="trackListCanNotNotContainTracks">Track-list can not not contain tracks</string>
    <string name="thisNameIsAlreadyTaken">This name is already taken</string>
    <string name="nameOrBpmCanNotBeEmpty">Name, or bpm can not be empty</string>
    <string name="nameCanNotBeEmpty">Name can not be empty</string>
    <string name="trackLists">Track Lists</string>
    <string name="options">Options</string>
    <string name="LT">MusicStandLog</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="weakPartsCount">Weak parts count : </string>
    <string name="strongPartsCount">Strong parts count : </string>
    <string name="metronomeOptions">Metronome options</string>
    <string name="tracksNumber">Tracks number :</string>
    <string name="availableTrackLists">Available track-lists :</string>
    <string name="tracks">Tracks</string>
    <string name="availableTracks">Available tracks :</string>
    <string name="beatsPerMinute">Beats per minute :</string>
    <string name="tap">Tap</string>
    <string name="trackListFeatures">Track-list features</string>
    <string name="name">Name :</string>
    <string name="addTrack">Add track</string>
    <string name="newTrack">New track</string>
    <string name="trackList">"Track-list: "</string>
    <string name="nextTrack">Next track :</string>
    <string name="track">"Track: "</string>
    <string name="bpm">" Bpm"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trackListss">Tracklists</string>
    <string name="gnBeatV12k">GosNadzorBeat v1.2k</string>
</resources>
