<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tracks"
            android:icon="@android:drawable/presence_audio_online"
            android:title="@string/tracks" />
        <item
            android:id="@+id/nav_tracklists"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/trackLists" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/about" />
    </group>
</menu>